--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,17 @@ $vw-viewport: 1920;
     @return $font;
 }
 
+@keyframes myAnimation {
+    10%, 90% {
+        top: -200%;
+        left: -200%;
+    }
+    40%, 60% {
+        top: 200%;
+        left: 200%;
+    }
+}
+
 body {
     font-family: 'UniNeueRegular', sans-serif;
     max-width: 100vw;
@@ -131,7 +142,7 @@ body {
         align-items: center;
 
         img {
-            width: get-vw(185px);
+            min-width: get-vw(185px);
         }
 
         .header__logo__description {
@@ -152,6 +163,8 @@ body {
 
             img {
                 padding-right: get-vw(10px);
+                min-width: get-vw(70px);
+                max-width: get-vw(70px);
             }
         }
 
@@ -179,8 +192,22 @@ body {
             text-decoration: none;
             font-weight: bold;
         }
-
+        position: relative;
         border-radius: 10px;
+        .shine{
+            position: absolute;
+            top: -200%;
+            left: -200%;
+            width: 80px;
+            height: 5px;
+            background-color: rgba(255, 255, 255, 0.884);
+            transform: rotate(-45deg);
+            animation-name: Shining;
+            animation-duration: 50000ms;
+            animation-delay: 1000ms;
+            animation-fill-mode: forwards;
+            animation-iteration-count: infinite;
+        }
     }
 
     .header__contacts {
@@ -393,7 +420,7 @@ body {
 
             .header__logo {
                 img{
-                    width: 150px;
+                    width: 185px;
                     padding: 20px;
                 }
                 .header__logo__description {
